--- a/style.css
+++ b/style.css
@@ -163,7 +163,12 @@ section{
   background:none;
 }
 
-
+#btn-back-to-top {
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  display: none;
+}
 
 
 .btn{
