--- a/style.css
+++ b/style.css
@@ -165,7 +165,8 @@ section{
 
 #btn-back-to-top {
   position: fixed;
-  bottom: 20px;
+  align-items: center;
+  bottom: 50px;
   right: 20px;
   display: none;
 }
